More rename from JERSI

--- a/implementation/pijersi.html
+++ b/implementation/pijersi.html
@@ -33,7 +33,7 @@ PIJERSI-JS-COPYRIGHT-MD-END -->
 
 		<div class="pijersi_column_class">
 
-			<p id="pijersi_text_pleaseWait">Please wait, ʝersi files are being loaded ...</p>
+			<p id="pijersi_text_pleaseWait">Please wait, piʝersi files are being loaded ...</p>
 
 			<audio preload="auto" id="pijersi_audio_slide">
 			  <source src="sound/slide.mp3" type="audio/mpeg">
