Rename "cell" as "hexagon"

--- a/implementation/pijersi.html
+++ b/implementation/pijersi.html
@@ -71,8 +71,8 @@ PIJERSI-JS-COPYRIGHT-MD-END -->
 					<button class="pijersi_button_class" type="button" id="pijersi_button_undo"
 						onclick="pijersi.presenter.undo()">Undo</button>
 
-					<button class="pijersi_button_class" type="button" id="pijersi_button_toogleCellNames"
-						onclick="pijersi.draw.toogleCellDivNames()">Coordinates</button>
+					<button class="pijersi_button_class" type="button" id="pijersi_button_toogleHexagonNames"
+						onclick="pijersi.draw.toogleHexagonDivNames()">Coordinates</button>
 
 					<button class="pijersi_button_class" type="button" id="pijersi_button_restartGame"
 						onclick="pijersi.presenter.restartGame()">Restart</button>
@@ -100,7 +100,6 @@ PIJERSI-JS-COPYRIGHT-MD-END -->
 
 	<script src="./pijersi_debug.js"></script>
 	<script src="./pijersi_draw.js"></script>
-	<script src="./pijersi_messager.js"></script>
 	<script src="./pijersi_presenter.js"></script>
 	<script src="./pijersi_rules.js"></script>
 </body>
